Added 3-starter selection mechanic

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
 </head>
 <body>
   <h1>Pokémon Tower Battle</h1>
-  <p>Loading your starter Pokémon...</p>
   <div id="pokemon-info"></div>
+  <div id="starter-selection">
+  <h2>Choose Your Starter Pokémon</h2>
+  <div id="starter-options"></div>
+  </div>
+  <div id="game-start" style="display:none;">
+  <h2 id="chosen-name"></h2>
+  <img id="chosen-sprite" />
+</div>
+
 
   <script src="game.js"></script>
 </body>
