Added first enemy battle with balanced opponents

--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Pokémon Tower Game</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Pokémon Tower Battle</h1>
-  <div id="pokemon-info"></div>
-  <div id="starter-selection">
-  <h2>Choose Your Starter Pokémon</h2>
-  <div id="starter-options"></div>
-  </div>
-  <div id="game-start" style="display:none;">
-  <h2 id="chosen-name"></h2>
-  <img id="chosen-sprite" />
-</div>
-
-
-  <script src="game.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Pokémon Tower Game</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <h1>Pokémon Tower Battle</h1>
+    <div id="pokemon-info"></div>
+    <div id="starter-selection">
+      <h2>Choose Your Starter Pokémon</h2>
+        <div id="starter-options"></div>
+    </div>
+    <div id="game-start" style="display:none;">
+      <h2 id="chosen-name"></h2>
+      <img id="chosen-sprite" />
+    </div>
+    <script src="pokemon-data.js"></script>
+    <script src="game.js"></script>
+  </body>
 </html>
