--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
     <div id="game-start" style="display:none;">
       <h2 id="chosen-name"></h2>
       <img id="chosen-sprite" />
+      <div id="player-battle">
+        <h2 id="chosen-name"></h2>
+        <img id="chosen-sprite" />
+        <div class="hp-container">
+          <div class="hp-bar" id="player-hp-bar"></div>
+        </div>
+        <p id="player-hp-text"></p>
+        <div id="player-stats" class="stats-box"></div>
+      </div>
+      <div id="enemy-battle">
+        <h2 id="enemy-name"></h2>
+        <img id="enemy-sprite" />
+        <div class="hp-container">
+          <div class="hp-bar" id="enemy-hp-bar"></div>
+        </div>
+        <p id="enemy-hp-text"></p>
+        <div id="enemy-stats" class="stats-box"></div>
+      </div>
     </div>
     <script src="pokemon-data.js"></script>
     <script src="game.js"></script>
