--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <p id="enemy-hp-text"></p>
         <div id="enemy-stats" class="stats-box"></div>
       </div>
+      <div id="battle-controls" style="margin-top: 20px;">
+        <button onclick="playerAttack()">Attack</button>
+      </div>
+      <p id="battle-log"></p>
     </div>
     <script src="pokemon-data.js"></script>
     <script src="game.js"></script>
